<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Aeroplane Chess</string>

    <string name="new_game">New Game</string>
    <string name="resume_game">Resume Game</string>
    <string name="two_players">Two Players</string>
    <string name="four_players">Four Players</string>

    <string name="Upgrade_title">Upgrade?</string>
    <string name="Upgrade_context">Upgrade to pro version to remove Ads?</string>
    <string name="Upgrade">Upgrade</string>
    <string name="Cancel">Cancel</string>
    <string name="OK">OK</string>

    <string name="home_title">Aeroplane</string>

    <string name="leaderboard">Leaderboard</string>



    <string name="red_vs_blue">Red vs Blue</string>
    <string name="yellow_vs_green">Yellow vs Green</string>

    <string name="remove_ad">remove ads</string>
    <string name="help">help</string>

    <string name="four_star">★ ★ ★ ★</string>
    <string name="three_star">★ ★ ★</string>
    <string name="two_star">★ ★</string>
    <string name="one_star">★</string>

    <string name="rules_title">Rules:</string>
    <string name="rule1">★ 1. Take a plane out of the hangar onto the board. This can only be done by rolling an even number.</string>
    <string name="rule2">★ 2. Move a piece that\'s on the board clockwise around the track, the number of spaces indicated by the dice.</string>
    <string name="rule3">★ 3. A roll of 6, whether it is used to enter or move a piece, gives that player another roll. A second 6 gives the player a third roll. If the player rolls a third 6, any pieces moved by the first two 6\'s must return to their hangar and play passes to the next player.</string>
    <string name="rule4">★ 4. When a player lands on an opponent\'s piece, the opponent returns that piece to its hangar.</string>
    <string name="rule5">★ 5. When a plane lands on a space of its own color, it immediately jumps to the next space of its own color. Any opposing planes sitting on these squares are sent back to their hangars.</string>
    <string name="rule6">★ 6. There are additional \"shortcut\" squares. When a plane lands on one of these of its own color, it may take the shortcut, and any opposing planes in the path of the shortcut are sent back to their hangars.This may also by done in succession with the previous rule, with a jump leading to shortcut. Some also play that a direct land on a shortcut may be followed by a jump.</string>
    <string name="rule7">★ 7. If a player cannot move pieces into the center base by an exact roll of the die, then they must move their piece backwards according to number rolled.</string>
    <string name="rule8">★ 8. Plane must fly into the center base on an exact roll. When a plane does so, it is placed facedown back in its own hangar, indicating that it is done for the game. The first player to get all of four of their planes to the center of the board wins. The rest play until there is only one loser.</string>

    <string name="error_title">Error</string>
    <string name="play_service_error">There is a problem with the google play service, you can\'t purchase pro version.</string>

    <string name="pro_title">pro version</string>
    <string name="pro_version">Thank you for upgrading to pro version! Enjoy the game without ADs!</string>

    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
